# founderstack-api

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.local.yml  pyproject.toml  pytest.ini
app/: config.py  main.py
app/api/: middleware.py
app/api/v1/: health.py
app/api/v1/endpoints/: identity.py  settings.py
app/api/v1/schemas/: base.py
app/api/webhooks/: clerk.py
app/core/: auth.py  database.py  exceptions.py  llm.py  security.py
app/models/: __init__.py  ai.py  base.py  identity.py  integration.py  knowledge.py  observability.py
app/services/: anthropic_service.py
migrations/: env.py
migrations/versions/: 3c1888cb888f_init_18_models.py  92b1b00c9339_added_apikeyregistry_model_last_used_at_.py
tests/: conftest.py  test_auth.py  test_bulletproof.py  test_hardening.py  test_llm.py  test_settings.py  test_webhooks.py
