[project]
name = "founderstack-api"
version = "0.1.0"
description = "Headless COO API"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.100.0",
    "asyncpg>=0.31.0",
    "cohere>=5.21.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.3",
    "langgraph>=1.1.10",
    "litellm>=1.83.0",
    "opentelemetry-sdk>=1.41.1",
    "passlib[bcrypt]>=1.7.4",
    "pinecone>=9.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "redis>=7.4.0",
    "sentry-sdk>=2.59.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "svix>=1.94.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-env>=1.6.0",
]

